# http-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindZlog.cmake
config/: mime.types  zlog.conf
include/: config.h  logging.h  utils.h
src/: config.cpp  main.c  utils.c
